# rust-wgpu-wasm-demo

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.js
bevy-web/: Cargo.toml
bevy-web/src/: lib.rs  main.rs
bevy-web/src/bevy_learn/: mod.rs
bevy-web/src/shaps/: mod.rs
src/: App.vue  main.js  style.css
wasm/: Cargo.toml
wasm/pkg/: package.json  rust_wasm_demo.d.ts  rust_wasm_demo.js  rust_wasm_demo_bg.js  rust_wasm_demo_bg.wasm  rust_wasm_demo_bg.wasm.d.ts
wasm/src/: hello.rs  lib.rs  main.rs  shader.wgsl
webGPU-demo/: webgpu-start.html
